# kernel

./: .gitignore  Cargo.toml  Justfile  Makefile  Makefile.toml  README.md  build.sh  disk.sh  initrd.sh  limine.cfg  setup.sh
biboot/: Cargo.toml
biboot/config/: loader.conf
biboot/config/entries/: default.conf
biboot/src/: main.rs
boot/: kernel
boot/efi/boot/: BOOTIA32.efi
boot/limine/: limine.cfg
boot/ovmf/: OVMF_CODE.fd
kernel/: Cargo.toml  Makefile  build.rs  linker.ld
kernel/src/: libc.rs  limine.rs  main.rs  utils.rs
kernel/src/arch/amd64/: gdt.rs  idt.rs  mod.rs  registers.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/io/: mod.rs  ports.rs  serial.rs  tty.rs
kernel/src/mem/: mod.rs  paging.rs  salloc.rs
kernel/src/x86/: gdt.rs  registers.rs
kernel/src/x86/asm/: gdt.asm
mkinitrd/: Cargo.toml
mkinitrd/src/: main.rs
src/: main.rs  memory.rs  serial.rs  tss.rs  uefi.rs
src/alloc/: mod.rs
src/framebuffer/: mod.rs  out.i4b
src/fs/: mod.rs
src/gdt/: mod.rs
src/idt/: interrupt.rs  mod.rs
src/idt/interrupts/: handlers.rs  mod.rs
src/interrupts/: handlers.rs  mod.rs
src/io/: mod.rs  stdin.rs  stdout.rs
src/io/port/: mod.rs  ports.rs
src/lazy/: mod.rs
src/libc/: mod.rs
src/process/: mod.rs
src/std/os/internal/: mod.rs
src/sync/: mod.rs
src/syscalls/: mod.rs
src/syscalls/definitions/: mod.rs
src/tty/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
