[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
resolver = "2"
members = ["biboot", "mkinitrd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.26.0"
volatile = "0.5.1"
x86 = "0.52.0"
xmas-elf = "0.9.1"
