[package]
name = "biboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
uefi = { version="0.26.0", features = ["logger"] }
uefi-services = "0.23.0"
x86 = "0.52.0"
xmas-elf = "0.9.1"
